--- a/css/style.css
+++ b/css/style.css
@@ -450,14 +450,22 @@ a.logo {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+.photoBox {
+  width: 100%; max-width: 900px;
+  height: auto;
+	display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .photoFrame {
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   margin: 0 auto;
-  height: 400px; width: 100%; max-width: 900px;
-  white-space: nowrap;
-  overflow: hidden;
+  width: 100%; max-width: 900px;
+  padding-bottom: 90%;
   z-index: 1;
 }
 .slider {
@@ -469,26 +477,23 @@ a.logo {
 .photoSelector {
   display: inline-flex;
   flex-direction: row;
-  justify-content: center;
-	margin-left: 35%;
-  left 50%;
-  width: 20%;
-  height: 30px;
-  position: absolute;
-
+  justify-content:center;
+  width: 100%;
+  height: 40px;
 }
 .selector-circle {
   background: rgba();
   box-shadow: 3px 5px 3px black;
   display: inline-block;
   border-radius: 50%;
-  width: 15px; height: 15px;
-  padding: .6rem;
+  width: 15px;
+  padding: .8rem;
   margin: .5rem;
-  position: relative;
+
 }
 .active {
-  background: rgba(255, 255, 255, 1);
+  background: rgba(255, 255, 255, .5);
+  box-shadow: 0 0 20px white, 3px 5px 3px black;
 }
 
 /***********************************************
@@ -767,7 +772,7 @@ iframe {
   .arrowLeft {
 	 order: 1;
 }
-  .photoFrame {
+  .photoBox {
 	 order: 2;
 }
   .arrowRight {
