--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ h1{
 }
 .headline {
   background-color: #111;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
   background-image: linear-gradient(#444, #222);
   border-radius: 6px;
   box-shadow: 0 1px 1px #777;
@@ -468,12 +469,6 @@ a.logo {
   padding-bottom: 90%;
   z-index: 1;
 }
-.slider {
-  position: relative;
-  transition: 1s;
-  height: 100%;
-  width: 100%;
-}
 .photoSelector {
   display: inline-flex;
   flex-direction: row;
@@ -482,7 +477,6 @@ a.logo {
   height: 40px;
 }
 .selector-circle {
-  background: rgba();
   box-shadow: 3px 5px 3px black;
   display: inline-block;
   border-radius: 50%;
