--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Put your CSS code in the left column, instead of example, to put or remove unnecessary prefixes. */
+
 /**********************************************************
 FONTS
 **********************************************************/
@@ -41,16 +43,26 @@ a {
 }
 header {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   background: url('../img/wall.jpg') repeat;
   background-size: cover;
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0 auto;
   min-height: 100vh;
   background: grey;
@@ -58,18 +70,29 @@ body {
 p {
   text-align: center;
   font-size: 1.5rem;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'orbitron', sans-serif;
   padding: 1rem;
 }
 .wrapper {
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin: 0;
   width: 100%;
 
-  align-items: flex-start;
-  flex: 1;
+  -webkit-box-align: start;
+
+      -ms-flex-align: start;
+
+          align-items: flex-start;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .content {
   margin-top: 20px;
@@ -85,6 +108,7 @@ p {
 }
 .fade-container {
 	opacity: 0;
+  -webkit-transition: all .5s;
   transition: all .5s;
 }
 .container-show {
@@ -108,20 +132,16 @@ h1{
   background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
   background-image: linear-gradient(#444, #222);
   border-radius: 6px;
-  box-shadow: 0 1px 1px #777;
+  -webkit-box-shadow: 0 1px 1px #777;
+          box-shadow: 0 1px 1px #777;
   margin: 1% 2% 5% 2%;
   -webkit-transform: translateX(-100%) scale(0.25);
-  -ms-transform: translateX(-100%) scale(0.25);
-  -moz-transform: translateX(-100%) scale(0.25);
-  -o-transform: translateX(-100%) scale(0.25);
   transform: translateX(-100%) scale(0.25);
+  -webkit-transition: all .5s;
   transition: all .5s;
 }
 .headline-show{
   -webkit-transform: translateX(0%) scale(1);
-  -ms-transform: translateX(0%) scale(1);
-  -moz-transform: translateX(0%) scale(1);
-  -o-transform: translateX(0%) scale(1);
   transform: translateX(0%) scale(1);
 
 }
@@ -147,20 +167,28 @@ h2 {
 ***********************************************/
 .menu {
   background: #444;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: auto; width: 100%;
   max-width: 100%;
   font-size: 1.8em;
   font-family: 'hacked', sans-serif;
   line-height: 1.6;
   position: relative;
+  -webkit-transition: all .5s ease;
   transition: all .5s ease;
+  visibility: visible;
   z-index: 9;
 }
 .menu-hide{
   max-width: 0;
   overflow: hidden;
+  visibility: hidden;
 }
 .nav_menu {
 
@@ -173,7 +201,9 @@ h2 {
   font-size: .2em;
   font-family: 'destroyregular';
   cursor: pointer;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .nav_menu:hover {
 
@@ -192,7 +222,8 @@ h2 {
   z-index: 4;
 }
 .navItem, .navLogo {
-  box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+  -webkit-box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+          box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
   color: #999;
   padding: 2px;
   text-align: center;
@@ -200,8 +231,10 @@ h2 {
 }
 .navItem:hover {
   color: azure;
+  -webkit-transition: 700ms;
   transition: 700ms;
-  box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
+  -webkit-box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
+          box-shadow: inset 1px 3px 1px black, inset -1px 0 1px black;
   text-shadow: 0 0 20px white;
 }
 .navLogo {
@@ -212,14 +245,16 @@ h2 {
 /*  box-shadow: 1px 1px 1px 3px #999;*/
   color: #999;
   position: fixed;
-  border-image: url(../img/menu-border.svg) 45 0 0 0;
+  -o-border-image: url(../img/menu-border.svg) 45 0 0 0;
+     border-image: url(../img/menu-border.svg) 45 0 0 0;
   border-top: 10px solid transparent;
   border-image-repeat: stretch;
   bottom: 0;
 }
 .sticky-nav-button {
   background: rgba(10,6,6,.7);
-  box-shadow: 1px 1px 1px 3px #999;
+  -webkit-box-shadow: 1px 1px 1px 3px #999;
+          box-shadow: 1px 1px 1px 3px #999;
   color: #999;
   position: fixed;
   top: 0;
@@ -241,7 +276,8 @@ a.logo {
   height: 0 auto;
 }
 .img-shadow {
-  box-shadow: 1px 1px 5px 1px black;
+  -webkit-box-shadow: 1px 1px 5px 1px black;
+          box-shadow: 1px 1px 5px 1px black;
 }
 
 /*About section
@@ -270,91 +306,10 @@ a.logo {
   background-position: center;
   background-size: 100% auto;
   -webkit-animation: shift 1s 3 alternate-reverse;
-  -moz-animation: shift 1s 3 alternate-reverse;
-  -o-animation: shift 1s 3 alternate-reverse;
-  -ms-animation: shift 1s 3 alternate-reverse;
   animation: shift 1s 3 alternate-reverse;
 }
 
 @-webkit-keyframes shift {
-  0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  20% { left: 5px; }
-  25% { left: 0; }
-  30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  35% { left: 0; }
-  40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
-  }
-}
-@-moz-keyframes shift {
-  0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  20% { left: 5px; }
-  25% { left: 0; }
-  30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  35% { left: 0; }
-  40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
-  }
-}
-@-o-keyframes shift {
-  0% {
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  10% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  20% { left: 5px; }
-  25% { left: 0; }
-  30% {
-    left: 5px;
-    background: url('../img/distort.jpg')no-repeat 50%;
-    background-size: cover;
-  }
-  35% { left: 0; }
-  40% {
-    background: url('../img/Attachment-1.jpeg')no-repeat 50%;
-    background-size: cover;
-  }
-  45% {left: 5px;}
-  50% {left: 0;}
-  100% {
-  }
-}
-@-ms-keyframes shift {
   0% {
     background: url('../img/distort.jpg')no-repeat 50%;
     background-size: cover;
@@ -446,18 +401,35 @@ a.logo {
   z-index: 1;
 }
 .photo-flex {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .photoBox {
   width: 100%; max-width: 900px;
   height: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .photoFrame {
 
@@ -470,14 +442,22 @@ a.logo {
   z-index: 1;
 }
 .photoSelector {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  flex-direction: row;
-  justify-content:center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack:center;
+      -ms-flex-pack:center;
+          justify-content:center;
   width: 100%;
   height: 40px;
 }
 .selector-circle {
-  box-shadow: 3px 5px 3px black;
+  -webkit-box-shadow: 3px 5px 3px black;
+          box-shadow: 3px 5px 3px black;
   display: inline-block;
   border-radius: 50%;
   width: 15px;
@@ -487,7 +467,8 @@ a.logo {
 }
 .active {
   background: rgba(255, 255, 255, .5);
-  box-shadow: 0 0 20px white, 3px 5px 3px black;
+  -webkit-box-shadow: 0 0 20px white, 3px 5px 3px black;
+          box-shadow: 0 0 20px white, 3px 5px 3px black;
 }
 
 /***********************************************
@@ -507,7 +488,8 @@ a.logo {
 }
 iframe {
   margin: 10px auto;
-  box-shadow: 2px 2px 0 black;
+  -webkit-box-shadow: 2px 2px 0 black;
+          box-shadow: 2px 2px 0 black;
 }
 
 /***********************************************
@@ -515,14 +497,24 @@ iframe {
 ***********************************************/
 
 .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin: 0 auto;
 	padding-bottom: .5rem;
 	width: 100%;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 
@@ -627,28 +619,10 @@ iframe {
 
 .overlay {
   -webkit-animation: pulse 2s infinite alternate;
-  -moz-animation: pulse 2s infinite alternate;
-  -o-animation: pulse 2s infinite alternate;
-  -ms-animation: pulse 2s infinite alternate;
   animation: pulse 2s infinite alternate;
 }
 
 @-webkit-keyframes pulse {
-  0% { opacity: .6; }
-
-  100% { opacity: .2; }
-  }
-@-moz-keyframes pulse {
-  0% { opacity: .6; }
-
-  100% { opacity: .2; }
-  }
-@-o-keyframes pulse {
-  0% { opacity: .6; }
-
-  100% { opacity: .2; }
-  }
-@-ms-keyframes pulse {
   0% { opacity: .6; }
 
   100% { opacity: .2; }
@@ -686,32 +660,43 @@ iframe {
     height: auto;
   }
   .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
     margin: 0 auto;
     background-color: #111;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
     background-image: linear-gradient(#444, #222);
     border-radius: 6px;
-    box-shadow: inset 0 1px 1px #777;
+    -webkit-box-shadow: inset 0 1px 1px #777;
+            box-shadow: inset 0 1px 1px #777;
   }
   .navItem {
     border-right: 1px solid #222;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     width: 100%;
   }
   .navItem:hover {
     border-right: none;
 /*    border-top: 2px solid #222;*/
-    box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
+    -webkit-box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
+            box-shadow: inset -1px 3px 0 black, inset 1px 0 2px black;
 /*    box-shadow: 0 20px 50px -1px white;*/
     position: relative;
 /*    top: 2px;*/
+    -webkit-transition: 200ms;
     transition: 200ms;
   }
   .sticky-nav {
     position: fixed;
-    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.5);
     top: 0;
 }
   .navLogo {
@@ -720,6 +705,7 @@ iframe {
     width: 100%;
     overflow: hidden;
     max-width: 0;
+    -webkit-transition: all 0.5s;
     transition: all 0.5s;
     text-align: center;
     opacity: 9;
@@ -761,16 +747,23 @@ iframe {
 	float: left;
 }
   .photo-flex {
-	flex-wrap: nowrap;
+	-ms-flex-wrap: nowrap;
+	    flex-wrap: nowrap;
 }
   .arrowLeft {
-	 order: 1;
+	 -webkit-box-ordinal-group: 2;
+	     -ms-flex-order: 1;
+	         order: 1;
 }
   .photoBox {
-	 order: 2;
+	 -webkit-box-ordinal-group: 3;
+	     -ms-flex-order: 2;
+	         order: 2;
 }
   .arrowRight {
-	 order: 3;
+	 -webkit-box-ordinal-group: 4;
+	     -ms-flex-order: 3;
+	         order: 3;
 }
   .social {
     width: 50%;
