--- a/css/style.css
+++ b/css/style.css
@@ -432,12 +432,12 @@ a.logo {
           align-items: center;
 }
 .photoFrame {
-
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   margin: 0 auto;
   width: 100%; max-width: 900px;
+  max-height: 500px;
   padding-bottom: 90%;
   z-index: 1;
 }
@@ -470,6 +470,7 @@ a.logo {
   -webkit-box-shadow: 0 0 20px white, 3px 5px 3px black;
           box-shadow: 0 0 20px white, 3px 5px 3px black;
 }
+
 
 /***********************************************
             Music Page
