added animation to the main header and updated style of photo selector circles

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,23 @@ header {
   z-index: 81;
 }
 
+@keyframes drop {
+  0% {
+    transform: translateX(-50%);
+    
+  }
+  50% {
+    
+  }
+  
+  100% {
+    
+    transform: translateX(0%);
+    
+  }
+
+}
+
 body {
   background-color: grey;
   display: -webkit-box;
@@ -193,18 +210,23 @@ h2 {
   visibility: hidden;
 }
 .nav_menu {
+  background: #444;
+  -webkit-box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+          box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+  color: #999;
   border-top: 1px solid black;
   border-right: 1px solid black;
+  display: inline-block;
   position: relative;
   z-index: 99;
   padding: .2rem 0 0 0.7rem;
-  width: 125px; height: 40px;
+  width: 20%; height: 50px;
   font-size: .2em;
   font-family: 'destroyregular';
   cursor: pointer;
-  -webkit-box-align: center;
+  /*-webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
+          align-items: center;*/
 }
 .button  {
   display: inline-block;
@@ -213,7 +235,7 @@ h2 {
   width: 20px; height: 20px;
 }
 .nav {
-  float: right;
+  display: inline-block;
   position: relative;
   overflow: hidden;
   padding-top: 9px;
@@ -262,7 +284,39 @@ h2 {
 /*Image Styles
 ==============================================*/
 
-a.logo {
+.city-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url('../img/city.png');
+  background-position: center;
+  background-size: 50%;
+  width: 2000px;
+  z-index: 82;
+  animation: drop 50s infinite alternate ease-in-out;
+}
+
+.logo-container {
+  position: relative;
+}
+.logo-background {
+  background:  rgb(34,34,34); /* for IE */
+  background:  rgba(34,34,34,0.75);
+  background-size: cover;
+  border-radius: 60%;
+  position: absolute;
+  top: 20px; right: 0; bottom: 0; left: 0;
+  overflow: hidden;
+  z-index: 98;
+  -webkit-filter: blur(5px);
+    filter: url('/media/blur.svg#blur');
+    filter: blur(5px);
+
+}
+a.logo,
+.logo-background {
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -271,8 +325,29 @@ a.logo {
   text-align: center;
  }
 .logo img {
+  position: relative;
   width: 100%;
+  z-index: 99;
   
+}
+.mobile-logo {
+  background-color: rgba(34,34,34,0.55);
+  position: relative;
+  /*-webkit-box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;
+          box-shadow: inset 0 1px 0 #111, 0 2px 0 #666;*/
+  color: #999;
+  padding: .5rem 0 0 0;
+  height: 50px;
+  width: 80%;
+  float: right;
+  font-size: 1rem;
+  font-family: 'destroyregular';
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  z-index: 99;
+
 }
 .img-shadow {
   -webkit-box-shadow: 1px 1px 5px 1px black;
@@ -281,15 +356,17 @@ a.logo {
 
 /*About section
 =============================================*/
-
+.about {
+  padding: 0;
+}
 .background,
 .about-background {
   background: url('../img/Attachment-1.jpeg')no-repeat;
   background-size: cover;
   width: 100%;
-  background-position: 60%;
+  background-position: right;
   -webkit-animation: shift 1s 3 alternate-reverse;
-    animation: shift 1s 3 alternate-reverse;  
+    animation: shift 1s 3 alternate-reversein;  
 }
 .background {
   z-index: 2;
@@ -308,6 +385,7 @@ a.logo {
 }
 .about-container {
   position: relative;
+  width: 100%;
 }
 .intro {
   
@@ -427,25 +505,25 @@ a.logo {
   height: 40px;
 }
 .selector-circle {
-  background: rgba(55, 55, 55, .5);
-  -webkit-box-shadow: 3px 5px 3px black;
-          box-shadow: 3px 5px 3px black;
+  background: #666;
+  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+          box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
   cursor: pointer; 
   display: inline-block;
+  position: relative;
   border-radius: 50%;
-  width: 15px; height: 15px;
+  width: 25px; height: 25px;
   padding: .5rem;
   margin: .9rem;
-  transition: all 100 ease;
+  transition: all 1000 ease;
 
 }
 .selector-circle:hover,
 .active {
-  background: rgba(255, 255, 255, .5);
-  -webkit-box-shadow: 0 0 20px white, 3px 5px 3px black;
-  box-shadow: 0 0 20px white, 3px 5px 3px black;
-  width: 25px; height: 25px;
-  margin: .7rem;
+  transform: translateY(-25%);
+  -webkit-box-shadow: 0 2px 1px rgba(255,255,255,0.4), inset 0 5px 1px rgba(0,0,0,0.1);
+          box-shadow:  .5px 9px 0 rgba(5,5,5,0.5), inset 0 -5px 0 rgba(0,0,0,0.3), inset 0 2px 5px rgba(255,255,255,0.4) ;
+          
 }
 
 
@@ -502,7 +580,7 @@ iframe {
   margin: .5rem;
   text-decoration: none;
   transition: all 300ms ease-in;
-  z-index: 1;
+  z-index: 98;
 }
 .social a:hover {
   -webkit-box-shadow: inset 35px 35px 0px white;
@@ -643,10 +721,6 @@ iframe {
     width: 40%;
     margin-left: 60%;
   }
-
-}
-@media screen and ( min-width: 56rem ) {
-
   .wrapper {
     display: block;
   }
