added clip path to main logo background.

--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ h2 {
   bottom: 0;
   background: url('../img/city.png');
   background-position: center;
-  background-size: 50%;
+  background-size: 40%;
   width: 2000px;
   z-index: 82;
   animation: drop 50s infinite alternate ease-in-out;
@@ -303,9 +303,10 @@ h2 {
 }
 .logo-background {
   background:  rgb(34,34,34); /* for IE */
-  background:  rgba(34,34,34,0.75);
+  background:  rgba(34,34,34,0.55);
   background-size: cover;
-  border-radius: 60%;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   position: absolute;
   top: 20px; right: 0; bottom: 0; left: 0;
   overflow: hidden;
@@ -391,9 +392,9 @@ a.logo,
   
   color: whitesmoke;
   position:relative;
-  margin: 0 0 0 40%;
+  margin: 0 0 0 50%;
   padding: 10px;
-  width: 60%;
+  width: 50%;
   background:  rgb(34,34,34); /* for IE */
   background: rgba(34,34,34,0.75);
   z-index: 98;
