--- a/css/style.css
+++ b/css/style.css
@@ -48,22 +48,7 @@ header {
   z-index: 81;
 }
 
-@keyframes drop {
-  0% {
-    transform: translateX(-50%);
-    
-  }
-  50% {
-    
-  }
-  
-  100% {
-    
-    transform: translateX(0%);
-    
-  }
 
-}
 
 body {
   background-color: grey;
@@ -281,9 +266,20 @@ h2 {
   top: 0;
 }
 
-/*Image Styles
+/*General Image Styles
 ==============================================*/
-
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../img/pattern2.png') repeat top left;
+  opacity: .4;
+  animation: pulse 2s infinite alternate;
+    -webkit-animation: pulse 2s infinite alternate;
+  z-index: 80;  
+}
 .city-background {
   position: absolute;
   top: 0;
@@ -626,17 +622,13 @@ iframe {
             Animations
 ***********************************************/
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('../img/pattern2.png') repeat top left;
-  opacity: .4;
-  animation: pulse 2s infinite alternate;
-    -webkit-animation: pulse 2s infinite alternate;
-  z-index: 80;  
+@keyframes drop {
+  0% {
+    transform: translateX(-40%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
 @keyframes opaque {
   0% {
